# callme

./: .env.example  .gitignore  Dockerfile  Dockerfile.fly  Makefile  README.md  call_logger.py  copilot-instructions.md  credentials.py  docker-compose.yml  events.py  fly.toml  health.py  models.py  parbaked.toml  pipeline.py  public_url.py  pyproject.toml  services.py
docs/: architecture.md  deployment.md  development.md  security-audit.md  stories.md
fly/: nginx.conf
integrations/: webhook.py
llm/: base.py  openai.py
routes/api/: calls.py  integrations.py  live.py  phone-numbers.py  platform.py  settings.py  templates.py  workflows.py
routes/twilio/: incoming.py  media-stream.py
schemas/templates/: faq_bot.json  (+2 more)
scripts/: fly-setup.sh
server/: .dockerignore  Dockerfile  pyproject.toml
server/app/: auth.py  config.py  credentials.py  crypto.py  events.py  health.py  main.py  pipeline.py  public_url.py  seed.py
server/app/api/: admin.py  auth.py  calls.py  integrations.py  live.py  phone_numbers.py  platform.py  settings.py  templates.py  workflows.py
server/app/db/: call_logger.py  models.py  session.py
server/app/integrations/: __init__.py  google_calendar.py
server/app/llm/: openai.py
server/app/stt/: deepgram.py
server/app/tts/: elevenlabs.py
server/app/twilio/: media_stream.py  webhook.py
server/app/workflow/: engine.py  schema.py
server/schemas/examples/: reception_flow.json
server/scripts/: qa_deepgram.py  qa_e2e_call.py  qa_live.py  qa_llm.py  qa_workflow.py
server/tests/: conftest.py  test_auth.py  test_call_api.py  test_call_logger.py  test_deepgram.py  test_health.py  test_integrations.py  test_live.py  test_llm_openai.py  test_phone_numbers.py  test_pipeline.py  test_public_url.py  test_security_hardening.py  test_seed.py  test_settings_templates.py  test_story23.py  test_twilio_webhook.py  test_user_accounts.py  test_webhook_integration.py  test_workflow_api.py  test_workflow_engine.py  test_workflow_schema.py
server/tests/fixtures/: test_audio.mulaw  tts_output.raw
stt/: deepgram.py
tests/: test_smoke.py
tests-legacy/: README.md
tts/: elevenlabs.py
web/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
workflow/: engine.py  schema.py
(+57 files in other folders)
